vault/base/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: vault:apps/Deployment:vault/guestbook-ui
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"vault:apps/Deployment:vault/guestbook-ui","deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2026-02-26T04:21:16Z","generation":2,"name":"guestbook-ui","namespace":"vault","resourceVersion":"6187583","uid":"7444c49a-3e1e-4e2f-82c6-50cc7a4d9e26"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":3,"selector":{"matchLabels":{"app":"guestbook-ui"}},"str [...]
    creationTimestamp: "2026-03-02T22:37:15Z"
    generation: 1
    name: guestbook-ui
    namespace: vault
    resourceVersion: "7133533"
    uid: f8442803-374e-44ed-a7e7-e245c03b385c
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 3
    selector:
      matchLabels:
        app: guestbook-ui
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: guestbook-ui
      spec:
        containers:
        - image: gcr.io/google-samples/gb-frontend:v5
          imagePullPolicy: IfNotPresent
          name: guestbook-ui
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-03-02T22:37:17Z"
      lastUpdateTime: "2026-03-02T22:37:17Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-03-02T22:37:15Z"
      lastUpdateTime: "2026-03-02T22:37:17Z"
      message: ReplicaSet "guestbook-ui-84774bdc6f" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: vault:apps/Deployment:vault/vault-agent-injector
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"vault:apps/Deployment:vault/vault-agent-injector","deployment.kubernetes.io/revision":"3","meta.helm.sh/release-name":"vault","meta.helm.sh/release-namespace":"vault"},"creationTimestamp":"2026-02-15T18:05:03Z","generation":4,"labels":{"app.kubernetes.io/instance":"vault","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"vault-agent-injector","component":"webhook"},"name [...]
      meta.helm.sh/release-name: vault
      meta.helm.sh/release-namespace: vault
    creationTimestamp: "2026-03-02T22:28:59Z"
    generation: 1
    labels:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: vault-agent-injector
      component: webhook
    name: vault-agent-injector
    namespace: vault
    resourceVersion: "7131738"
    uid: 0f47d8bd-357f-414d-81d8-8dcacf2a5f44
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app.kubernetes.io/instance: vault
        app.kubernetes.io/name: vault-agent-injector
        component: webhook
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          cattle.io/timestamp: "2026-02-21T01:57:27Z"
          kubectl.kubernetes.io/restartedAt: "2026-02-20T22:05:14+01:00"
        labels:
          app.kubernetes.io/instance: vault
          app.kubernetes.io/name: vault-agent-injector
          component: webhook
      spec:
        affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: vault
                  app.kubernetes.io/name: vault-agent-injector
                  component: webhook
              topologyKey: kubernetes.io/hostname
        containers:
        - args:
          - agent-inject
          - 2>&1
          env:
          - name: AGENT_INJECT_LISTEN
            value: :8080
          - name: AGENT_INJECT_LOG_LEVEL
            value: info
          - name: AGENT_INJECT_VAULT_ADDR
            value: http://vault.vault.svc:8200
          - name: AGENT_INJECT_VAULT_AUTH_PATH
            value: auth/kubernetes
          - name: AGENT_INJECT_VAULT_IMAGE
            value: hashicorp/vault:1.21.2
          - name: AGENT_INJECT_TLS_AUTO
            value: vault-agent-injector-cfg
          - name: AGENT_INJECT_TLS_AUTO_HOSTS
            value: vault-agent-injector-svc,vault-agent-injector-svc.vault,vault-agent-injector-svc.vault.svc
          - name: AGENT_INJECT_LOG_FORMAT
            value: standard
          - name: AGENT_INJECT_REVOKE_ON_SHUTDOWN
            value: "false"
          - name: AGENT_INJECT_CPU_REQUEST
            value: 250m
          - name: AGENT_INJECT_CPU_LIMIT
            value: 500m
          - name: AGENT_INJECT_MEM_REQUEST
            value: 64Mi
          - name: AGENT_INJECT_MEM_LIMIT
            value: 128Mi
          - name: AGENT_INJECT_DEFAULT_TEMPLATE
            value: map
          - name: AGENT_INJECT_TEMPLATE_CONFIG_EXIT_ON_RETRY_FAILURE
            value: "true"
          - name: POD_NAME
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.name
          image: hashicorp/vault-k8s:1.7.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 5
          name: sidecar-injector
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 5
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          fsGroup: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 100
        serviceAccount: vault-agent-injector
        serviceAccountName: vault-agent-injector
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-03-02T22:29:10Z"
      lastUpdateTime: "2026-03-02T22:29:10Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-03-02T22:28:59Z"
      lastUpdateTime: "2026-03-02T22:29:10Z"
      message: ReplicaSet "vault-agent-injector-87fc9d44f" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
