vault/base/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: vault:/Service:vault/guestbook-ui
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"vault:/Service:vault/guestbook-ui"},"creationTimestamp":"2026-02-26T04:21:16Z","name":"guestbook-ui","namespace":"vault","resourceVersion":"6187562","uid":"9e77db3d-2eae-4fdf-9594-ec9b2d9c173e"},"spec":{"clusterIP":"10.103.63.151","clusterIPs":["10.103.63.151"],"internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","ports":[{"port":80,"protocol":"TCP","targetPo [...]
    creationTimestamp: "2026-03-02T22:37:15Z"
    name: guestbook-ui
    namespace: vault
    resourceVersion: "7133490"
    uid: f697dc26-85ee-4d98-bb97-c3712fac3cf5
  spec:
    clusterIP: 10.103.63.151
    clusterIPs:
    - 10.103.63.151
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: guestbook-ui
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: vault:/Service:vault/vault
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"vault:/Service:vault/vault","meta.helm.sh/release-name":"vault","meta.helm.sh/release-namespace":"vault"},"creationTimestamp":"2026-02-15T18:05:03Z","labels":{"app.kubernetes.io/instance":"vault","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"vault","helm.sh/chart":"vault-0.32.0"},"name":"vault","namespace":"vault","resourceVersion":"6185625","uid":"82acb0bb-1060-4e6e-85a4-d8 [...]
      meta.helm.sh/release-name: vault
      meta.helm.sh/release-namespace: vault
    creationTimestamp: "2026-03-02T22:28:59Z"
    labels:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: vault
      helm.sh/chart: vault-0.32.0
    name: vault
    namespace: vault
    resourceVersion: "7131583"
    uid: a1bda067-de97-4eba-aa50-2a664ef25254
  spec:
    clusterIP: 10.104.203.24
    clusterIPs:
    - 10.104.203.24
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 8200
      protocol: TCP
      targetPort: 8200
    - name: https-internal
      port: 8201
      protocol: TCP
      targetPort: 8201
    publishNotReadyAddresses: true
    selector:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/name: vault
      component: server
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: vault:/Service:vault/vault-active
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"vault:/Service:vault/vault-active","meta.helm.sh/release-name":"vault","meta.helm.sh/release-namespace":"vault"},"creationTimestamp":"2026-02-15T18:05:03Z","labels":{"app.kubernetes.io/instance":"vault","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"vault","helm.sh/chart":"vault-0.32.0","vault-active":"true"},"name":"vault-active","namespace":"vault","resourceVersion":"618562 [...]
      meta.helm.sh/release-name: vault
      meta.helm.sh/release-namespace: vault
    creationTimestamp: "2026-03-02T22:28:59Z"
    labels:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: vault
      helm.sh/chart: vault-0.32.0
      vault-active: "true"
    name: vault-active
    namespace: vault
    resourceVersion: "7131607"
    uid: 9018ff22-a0c6-4e92-94ad-779dc633bb4f
  spec:
    clusterIP: 10.96.34.128
    clusterIPs:
    - 10.96.34.128
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 8200
      protocol: TCP
      targetPort: 8200
    - name: https-internal
      port: 8201
      protocol: TCP
      targetPort: 8201
    publishNotReadyAddresses: true
    selector:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/name: vault
      component: server
      vault-active: "true"
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: vault:/Service:vault/vault-agent-injector-svc
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"vault:/Service:vault/vault-agent-injector-svc","meta.helm.sh/release-name":"vault","meta.helm.sh/release-namespace":"vault"},"creationTimestamp":"2026-02-15T18:05:03Z","labels":{"app.kubernetes.io/instance":"vault","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"vault-agent-injector"},"name":"vault-agent-injector-svc","namespace":"vault","resourceVersion":"6185628","uid":"b7cb [...]
      meta.helm.sh/release-name: vault
      meta.helm.sh/release-namespace: vault
    creationTimestamp: "2026-03-02T22:28:59Z"
    labels:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: vault-agent-injector
    name: vault-agent-injector-svc
    namespace: vault
    resourceVersion: "7131594"
    uid: 24bf35c5-bbff-47a5-8942-2ad24cbceda7
  spec:
    clusterIP: 10.109.95.174
    clusterIPs:
    - 10.109.95.174
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8080
    selector:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/name: vault-agent-injector
      component: webhook
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: vault:/Service:vault/vault-internal
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"vault:/Service:vault/vault-internal","meta.helm.sh/release-name":"vault","meta.helm.sh/release-namespace":"vault"},"creationTimestamp":"2026-02-15T18:05:03Z","labels":{"app.kubernetes.io/instance":"vault","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"vault","helm.sh/chart":"vault-0.32.0","vault-internal":"true"},"name":"vault-internal","namespace":"vault","resourceVersion":" [...]
      meta.helm.sh/release-name: vault
      meta.helm.sh/release-namespace: vault
    creationTimestamp: "2026-03-02T22:28:59Z"
    labels:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: vault
      helm.sh/chart: vault-0.32.0
      vault-internal: "true"
    name: vault-internal
    namespace: vault
    resourceVersion: "7131606"
    uid: 53c44e92-76a7-488f-b53b-3085fe1e4371
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 8200
      protocol: TCP
      targetPort: 8200
    - name: https-internal
      port: 8201
      protocol: TCP
      targetPort: 8201
    publishNotReadyAddresses: true
    selector:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/name: vault
      component: server
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: vault:/Service:vault/vault-standby
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"vault:/Service:vault/vault-standby","meta.helm.sh/release-name":"vault","meta.helm.sh/release-namespace":"vault"},"creationTimestamp":"2026-02-15T18:05:03Z","labels":{"app.kubernetes.io/instance":"vault","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"vault","helm.sh/chart":"vault-0.32.0"},"name":"vault-standby","namespace":"vault","resourceVersion":"6185623","uid":"f71ba68d-a [...]
      meta.helm.sh/release-name: vault
      meta.helm.sh/release-namespace: vault
    creationTimestamp: "2026-03-02T22:28:59Z"
    labels:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: vault
      helm.sh/chart: vault-0.32.0
    name: vault-standby
    namespace: vault
    resourceVersion: "7131599"
    uid: 9ba93539-b2d0-470c-ad9e-67d417fdeb81
  spec:
    clusterIP: 10.111.47.101
    clusterIPs:
    - 10.111.47.101
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 8200
      protocol: TCP
      targetPort: 8200
    - name: https-internal
      port: 8201
      protocol: TCP
      targetPort: 8201
    publishNotReadyAddresses: true
    selector:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/name: vault
      component: server
      vault-active: "false"
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: vault:/Service:vault/vault-ui
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"vault:/Service:vault/vault-ui","meta.helm.sh/release-name":"vault","meta.helm.sh/release-namespace":"vault"},"creationTimestamp":"2026-02-15T18:05:03Z","labels":{"app.kubernetes.io/instance":"vault","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"vault-ui","helm.sh/chart":"vault-0.32.0"},"name":"vault-ui","namespace":"vault","resourceVersion":"6185626","uid":"4338b513-d99b-4af [...]
      meta.helm.sh/release-name: vault
      meta.helm.sh/release-namespace: vault
    creationTimestamp: "2026-03-02T22:28:59Z"
    labels:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: vault-ui
      helm.sh/chart: vault-0.32.0
    name: vault-ui
    namespace: vault
    resourceVersion: "7131609"
    uid: 0dafe48a-5adc-43c8-a257-7987827052d9
  spec:
    clusterIP: 10.107.75.124
    clusterIPs:
    - 10.107.75.124
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 8200
      protocol: TCP
      targetPort: 8200
    publishNotReadyAddresses: true
    selector:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/name: vault
      component: server
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: vault:/Service:vault/vault-ui-nodeport
      field.cattle.io/publicEndpoints: '[{"port":31280,"protocol":"TCP","serviceName":"vault:vault-ui-nodeport","allNodes":true}]'
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"vault:/Service:vault/vault-ui-nodeport","field.cattle.io/publicEndpoints":"[{\"port\":31280,\"protocol\":\"TCP\",\"serviceName\":\"vault:vault-ui-nodeport\",\"allNodes\":true}]"},"creationTimestamp":"2026-02-15T18:32:28Z","name":"vault-ui-nodeport","namespace":"vault","resourceVersion":"6185619","uid":"f5a67af5-b98b-4e80-a1f3-a30348ced11f"},"spec":{"clusterIP":"10.106.29.85","clusterIPs":["10 [...]
    creationTimestamp: "2026-03-02T22:28:59Z"
    name: vault-ui-nodeport
    namespace: vault
    resourceVersion: "7131605"
    uid: bd5c672c-b221-4478-9878-737da872ab1c
  spec:
    clusterIP: 10.106.29.85
    clusterIPs:
    - 10.106.29.85
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      nodePort: 31280
      port: 8200
      protocol: TCP
      targetPort: 8200
    selector:
      app.kubernetes.io/instance: vault
      app.kubernetes.io/name: vault
      component: server
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
